--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
       </div>
     </section>
     
-    <!-- Sher-Locked -->
+    <!--  -->
     <section id="events" style="background: #f7f7f7;">
       <div class="container">
         <div class="row align-items-center" style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
@@ -511,10 +511,10 @@ The objective is to show your technical strengths and then solve the puzzles. Th
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4" style="font-size: 40px">Sher-Locked</h2>
-              <h1 style="font-size: 17px; color: #44cd5a">BITSKrieg<br /></h1>
+              <h2 class="display-4" style="font-size: 40px">Blueprint For Tomorrow</h2>
+              <h1 style="font-size: 17px; color: #44cd5a">DWDG<br /></h1>
               <p>
-                Join us for an unprecedented experience brought to you by BITSKrieg! In just 15 minutes, within the confines of an enclosed room, participants will explore the depths of forensics, hunting for clues and unravelling secrets. This event is tailored for beginners, requiring only a curious mind and a team of like-minded individuals. Prepare to feel the adrenaline rush of investigators as you delve into the unknown. Don't miss out - see you there!
+                The Blueprint for Tomorrow Case Challenge is a one-day event designed for students to solve real-world problems using creative and analytical skills. This beginner-to-intermediate level competition will challenge participants to brainstorm innovative solutions in teams of four.
               </p>
               <p style="background: #ffffff"></p>
               <div class="row">
@@ -545,37 +545,6 @@ The objective is to show your technical strengths and then solve the puzzles. Th
       </div>
     </section>
 
-    <!-- CodeGolf -->
-    <section>
-      <div class="container">
-        <div class="row align-items-center" style="background: #ffffff; border-radius: 17px;">
-          <div class="col-lg-6 order-lg-2">
-            <div class="p-5">
-              <img class="img-thumbnail img-fluid" src="assets/img/TW'24/3.png" style="max-height: 100%; max-width: 100%;">
-            </div>
-          </div>
-          <div class="col-lg-6 order-lg-2">
-            <div class="p-5">
-              <h2 class="display-4" style="font-size: 40px">Code Golf&nbsp;<br /></h2>
-              <h1 style="font-size: 17px; color: rgb(68, 205, 90)">DevSoc</h1>
-              <p class="text-start" style="color: rgb(33, 37, 41)">
-                CTE in association with DevSoc brings to you Code Golf – an electrifying programming competition that brings out the efficient programmer in you! Use your software craftsmanship skills to its full potential. So, what’s the wait? Register yourselves for this thrilling event and develop the cleanest and shortest possible source code to win exciting cash prizes.
-              </p>
-              <div class="row">
-                <div class="col text-start">
-                  <p style="width: 135px">Starts<br />Ends<br />Prizes</p>
-                </div>
-                <div class="col">
-                  <p style="color: rgb(122, 204, 109)">3rd April 9:00 AM<br />4th April 9:00 AM<br />₹10000<br /></p>
-                </div>
-              </div>
-              <button onclick="window.open('https://forms.gle/8RSL4N2RCgueQnq87','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
 
     <!-- ERC -->
     <section>
@@ -600,13 +569,16 @@ The objective is to show your technical strengths and then solve the puzzles. Th
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4" style="font-size: 40px">
-                Circuit Master Challenge
+                BITS & Bids: The Maker's Auction
               </h2>
               <h1 style="font-size: 17px; color: rgb(68, 205, 90)">
                 Electronic and Robotics Club (ERC)<br />
               </h1>
               <p class="text-start" style="color: rgb(33, 37, 41)">
-                Calling all electronics enthusiasts! Get ready to dive into the world of rapid prototyping and showcase your skills at the upcoming TechWeekend hosted by CTE in collaboration with ERC. In this exhilarating event, participants will harness the power of Arduinos to tackle mind-bending puzzles and unleash their creativity. It's time to put your circuitry skills to the test and compete for the coveted title of Circuit Master. Don't miss out on this electrifying opportunity! Register now and be part of the excitement.
+                Gear up for an electrifying robotics experience with our one-of-a-kind home automation auction challenge! In this event, participant teams will bid on essential robotics components, such as sensors, microcontrollers, and actuators, to assemble a functional home automation system.
+Each team will receive a virtual budget and must strategically plan their purchases during the auction to outsmart their competitors. Teams will design innovative solutions using these parts to solve given problem statements within a limited time frame.
+Adding a twist, we’ve introduced a “blind auction” for priority-priced items, where teams must weigh their risks and rewards carefully. There’s also a black market trade for teams to barter and maximize their resources creatively!
+
               </p>
               <div class="row">
                 <div class="col text-start">
@@ -619,7 +591,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                 </div>
               </div>
               <button
-              onclick="window.open('https://forms.gle/dTFz7TJVznAybcAJ6','_blank')"
+              onclick="window.open('https://forms.gle/8geuRPGLspbosApH9','_blank')"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -733,50 +705,6 @@ The objective is to show your technical strengths and then solve the puzzles. Th
     </div>
   </section>
 
-<!-- GigaWatt -->
-<section>
-  <div class="container">
-    <div class="row align-items-center" style="background: #ffffff; border-radius: 17px;">
-      <div class="col-lg-6 order-lg-1">
-        <div class="p-5 d-flex justify-content-center">
-          <img class="img-thumbnail img-fluid" src="assets/img/TW'24/8.png" style="max-height: 100%; max-width: 100%;">
-        </div>
-      </div>
-      <div class="col-lg-6 order-lg-2">
-        <div class="p-5">
-          <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">Vehicle Design and EV Workshop</h2>
-          <h1 style="font-size: 17px; color: #44cd5a">Team GigaWatt<br /></h1>
-          <p>
-            Dive into the world of vehicle designing and simulation with our exclusive workshop on Fusion360. Learn the intricacies of crafting lightweight chassis and gain insights into engineering simulations tailored for electric vehicles. Whether you're a beginner or an enthusiast, this workshop welcomes all to explore the exciting realm of automotive innovation. Don't miss out on this opportunity to hone your skills and unleash your creativity!
-          </p>
-          <p style="background: #ffffff"></p>
-          <div class="row">
-            <div class="col text-start">
-              <p style="width: 135px">Date<br />Time</p>
-            </div>
-            <div class="col">
-              <p style="color: rgb(122, 204, 109)">2nd April<br />8:00 PM - 11:00 PM</p>
-            </div>
-          </div>
-          <!-- <button
-            onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSctjdYRqGccDIQslNahld2HaHW7Jq0O0kvjqjq-SVbudU5dqQ/viewform','_blank');"
-            class="btn btn-primary border rounded-0"
-            type="button"
-            style="
-              background: #44cd5a;
-              border-top-color: rgb(255, 255, 255);
-              border-right-color: rgb(255, 255, 255);
-              border-bottom-color: rgb(255, 255, 255);
-              border-left-color: rgb(252, 252, 252);
-            "
-          >
-            Register
-          </button> -->
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 
 <!-- Finance Quiz -->
@@ -791,7 +719,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
       <div class="col-lg-6 order-lg-2">
         <div class="p-5">
           <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">Finance Quiz</h2>
-          <h1 style="font-size: 17px; color: #44cd5a">Wall Street Club (WSC)<br /></h1>
+          <h1 style="font-size: 17px; color: #44cd5a">Society of Finance and Investing(SoFI)<br /></h1>
           <p>
             Get ready to put your finance knowledge to the ultimate test in a thrilling evening of brain-teasing fun at the Finance Quiz, proudly presented in association with the Wall Street Club (WSC) at BITS Goa. Join us on April 1st from 7 to 9 pm for an exciting quiz extravaganza filled with challenging questions and exciting twists. Whether you're a finance whiz or just dipping your toes into the world of money management, this quiz is open to all students eager to showcase their skills and compete for fantastic prizes. Mark your calendars and register for a night of friendly competition and finance-themed excitement!
           </p>
@@ -886,59 +814,6 @@ The objective is to show your technical strengths and then solve the puzzles. Th
     </div>
   </div>
 </section>
-
-
-<!-- SEDS Talk -->
-<section>
-  <div class="container">
-    <div class="row align-items-center" style="background: #ffffff; border-radius: 17px;">
-      <div class="col-lg-6 order-lg-1">
-        <div class="p-5 d-flex justify-content-center">
-          <img class="img-thumbnail img-fluid" src="assets/img/TW'24/12.png" style="max-height: 100%; max-width: 100%;">
-        </div>
-      </div>
-      <div class="col-lg-6 order-lg-2">
-        <div class="p-5">
-          <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">The Cosmic Tapestry</h2>
-          <h1 style="font-size: 17px; color: #44cd5a">SEDS, BITS Goa<br /></h1>
-          <p>
-
-            Yvette Cendes, a post-doctoral researcher at the Harvard-Smithsonian Center for Astrophysics, will be delivering a talk. The talk will take place in the Tele Presence classroom. Make sure you join in to dive into a world full of insights!</p>
-          <p style="background: #ffffff"></p>
-          <div class="row">
-            <div class="col text-start">
-              <p style="width: 135px">Date<br />Time</p>
-            </div>
-            <div class="col">
-              <p style="color: rgb(122, 204, 109)">3rd April<br />9:30 PM - 10:30 PM</p>
-            </div>
-          </div>
-           <!-- <button
-            onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSctjdYRqGccDIQslNahld2HaHW7Jq0O0kvjqjq-SVbudU5dqQ/viewform','_blank');"
-            class="btn btn-primary border rounded-0"
-            type="button"
-            style="
-              background: #44cd5a;
-              border-top-color: rgb(255, 255, 255);
-              border-right-color: rgb(255, 255, 255);
-              border-bottom-color: rgb(255, 255, 255);
-              border-left-color: rgb(252, 252, 252);
-            "
-          >
-            Register
-          </button> -->
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-
-  
-
-
 
     <!-- Footer -->
     <footer
