--- a/index.html
+++ b/index.html
@@ -718,10 +718,10 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
       </div>
       <div class="col-lg-6 order-lg-2">
         <div class="p-5">
-          <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">Finance Quiz</h2>
+          <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">Finance Frenzy </h2>
           <h1 style="font-size: 17px; color: #44cd5a">Society of Finance and Investing(SoFI)<br /></h1>
           <p>
-            Get ready to put your finance knowledge to the ultimate test in a thrilling evening of brain-teasing fun at the Finance Quiz, proudly presented in association with the Wall Street Club (WSC) at BITS Goa. Join us on April 1st from 7 to 9 pm for an exciting quiz extravaganza filled with challenging questions and exciting twists. Whether you're a finance whiz or just dipping your toes into the world of money management, this quiz is open to all students eager to showcase their skills and compete for fantastic prizes. Mark your calendars and register for a night of friendly competition and finance-themed excitement!
+            This TechWeekend'24, SoFI proudly presents Finance Frenzy, a thrilling two-round finance challenge designed to test your basic financial knowledge in a fun and interactive way! Compete for cash prizes worth ₹10,000 as you navigate exciting activities like quizzes and problem-solving. Whether you're a finance newbie or an enthusiast, this event is open to all! So gear up and join us for a weekend filled with learning, excitement, and rewards. Don’t miss your chance to claim the crown and the cash!
           </p>
           <p style="background: #ffffff"></p>
           <div class="row">
