--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
                 </div>
               </div>
               <button
-              onclick="window.open('https://forms.gle/8geuRPGLspbosApH9','_blank')"
+              onclick="window.open('https://forms.gle/Qs7N1m9GcERChBZp8','_blank')"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
