--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                   <p style="width: 135px">Date<br />Time<br />Prizes</p>
                 </div>
                 <div class="col">
-                  <p style="color: rgb(122, 204, 109)">11th January<br />8:00pm to 10:00pm<br />₹10000<br /></p>
+                  <p style="color: rgb(122, 204, 109)">11th January<br />11:00 A.M. to 1:00pm<br />₹10000<br /></p>
                 </div>
               </div>
               <button onclick="window.open('https://docs.google.com/forms/d/1T0r5eAeAh8copGprxyAGWFVDsT1ItzYgDMv_6cKkiMM/edit','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
@@ -476,7 +476,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    3rd April 12:00 AM<br />5th April 11:59 PM<br />₹10000<br />
+                    13th January 12:00 AM<br />15th January 11:59 PM<br />₹10000<br />
                   </p>
                 </div>
               </div>
@@ -522,11 +522,11 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                   <p style="width: 135px">Date<br />Time<br/>Prizes</p>
                 </div>
                 <div class="col">
-                  <p style="color: rgb(122, 204, 109)">2nd April<br />6:00 PM - 10:30 PM<br/>₹10000<br />
+                  <p style="color: rgb(122, 204, 109)">11th January<br />8:30 PM - 10:30 PM<br/>₹10000<br />
                 </div>
               </div>
               <button
-                onclick="window.open('https://forms.gle/EUcFXCANriPSuVPL6','_blank');"
+                onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfYtA4cywD6ZWdoZKMsoW8eyFo2y9DbbpCzCw6II3g9aJI3sQ/viewform','_blank');"
                 class="btn btn-primary border rounded-0"
                 type="button"
                 style="
@@ -586,7 +586,7 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    6th April<br />4:30 PM to 9:30 PM<br />₹10000<br />
+                    12th January<br />6:30 PM to 8:30 PM<br />₹10000<br />
                   </p>
                 </div>
               </div>
@@ -681,12 +681,12 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
               </div>
               <div class="col">
                 <p style="color: rgb(122, 204, 109)">
-                  4th April<br />6:00 PM to 12:00 AM<br />₹10000<br />
+                  10th January<br />8:30 PM to 10:30 PM<br />₹10000<br />
                 </p>
               </div>
             </div>
             <button
-            onclick="window.open('https://forms.gle/4vP1Mw1mniTEsgmJ6','_blank')"
+            onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScvFwm8NRXQp12C0USpBbVfD9jk1Cp6nWyo1PRLsH494cNUig/viewform?usp=header','_blank')"
             class="btn btn-primary border rounded-0"
             type="button"
             style="
@@ -721,7 +721,7 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
           <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">Finance Frenzy </h2>
           <h1 style="font-size: 17px; color: #44cd5a">Society of Finance and Investing(SoFI)<br /></h1>
           <p>
-            This TechWeekend'24, SoFI proudly presents Finance Frenzy, a thrilling two-round finance challenge designed to test your basic financial knowledge in a fun and interactive way! Compete for cash prizes worth ₹10,000 as you navigate exciting activities like quizzes and problem-solving. Whether you're a finance newbie or an enthusiast, this event is open to all! So gear up and join us for a weekend filled with learning, excitement, and rewards. Don’t miss your chance to claim the crown and the cash!
+            This TechWeekend'25, SoFI proudly presents Finance Frenzy, a thrilling two-round finance challenge designed to test your basic financial knowledge in a fun and interactive way! Compete for cash prizes worth ₹10,000 as you navigate exciting activities like quizzes and problem-solving. Whether you're a finance newbie or an enthusiast, this event is open to all! So gear up and join us for a weekend filled with learning, excitement, and rewards. Don’t miss your chance to claim the crown and the cash!
           </p>
           <p style="background: #ffffff"></p>
           <div class="row">
@@ -729,11 +729,11 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
               <p style="width: 135px">Date<br />Time<br/>Prizes</p>
             </div>
             <div class="col">
-              <p style="color: rgb(122, 204, 109)">1st April<br />8:30 PM - 9:30 PM<br/>₹10000</p>
+              <p style="color: rgb(122, 204, 109)">14th January<br />8:30 PM - 10:30 PM<br/>₹10000</p>
             </div>
           </div>
            <button
-            onclick="window.open('https://forms.gle/VQXu5XMZ5mrXcDZU7','_blank');"
+            onclick="window.open('https://forms.gle/zDQbYsxp5Bsj7mdX8','_blank');"
             class="btn btn-primary border rounded-0"
             type="button"
             style="
