--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
         <div class="row align-items-center" style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-thumbnail img-fluid" src="assets/img/TW'24/2.png" style="max-width: 100%; max-height: 100%;">
+              <img class="img-thumbnail img-fluid" src="assets/img/TW'24/Techweed_2.png" style="max-width: 100%; max-height: 100%;">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
@@ -632,7 +632,7 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
                   <p style="width: 135px">Starts<br />Ends<br />Prizes</p>
                 </div>
                 <div class="col">
-                  <p style="color: rgb(122, 204, 109)"><br />2nd April 12:00 AM<br />₹10000<br />3rd April 12:00 AM</p>
+                  <p style="color: rgb(122, 204, 109)"><br />10th January<br />14th January<br />₹10000</p>
                 </div>
               </div>
               <button onclick="window.open('https://forms.gle/tMyD1Qj3AWJAAzDZA','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
