--- a/index.html
+++ b/index.html
@@ -668,13 +668,13 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4" style="font-size: 40px">
-              Make for India Hackathon
+              The 180DC Insight Incubator
             </h2>
             <h1 style="font-size: 17px; color: rgb(68, 205, 90)">
               180DC<br />
             </h1>
             <p class="text-start" style="color: rgb(33, 37, 41)">
-              Join us for an exciting session with 180 DC BITS Goa and project partner Srutanjay Narayan (IAS of 2020 batch) for a chance to make a real impact on India's 1.4 billion people. Develop an app to bridge the gap between the public and administration, implementing the innovative KYA (Know Your Administration) concept. Get ready to brainstorm, design, and refine your ideas within a tight time frame, with opportunities for MVP submissions and bonus points for creative implementations. Don't miss this chance to create change!              </p>
+              Introducing The 180DC Insight Incubator, an innovative consulting competition designed to ignite your strategic thinking and problem-solving skills! Participants will kick off with an engaging bootcamp led by industry experts, equipping them with essential insights and tools. Teams will then tackle a real-world case during a collaborative workshop, where they'll brainstorm and refine their solutions. The event culminates in an exciting final presentation round, where top teams will showcase their strategies to a panel of esteemed judges. Don't miss this chance to enhance your consulting abilities, network with professionals, and compete for fantastic prizes—sign up today and get ready to innovate!
             <div class="row">
               <div class="col text-start">
                 <p style="width: 135px">Date<br />Time<br />Prizes</p>
