Added Krieg poster

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
         <div class="row align-items-center" style="background: #ffffff; border-radius: 17px;">
           <div class="col-lg-6 order-lg-1">
             <div class="p-5 d-flex justify-content-center">
-              <img class="img-thumbnail img-fluid" src="assets/img/TW'24/4.png" style="max-height: 100%; max-width: 100%;">
+              <img class="img-thumbnail img-fluid" src="assets/img/TW'24/CTF.png" style="max-height: 100%; max-width: 100%;">
             </div>
           </div>
           <div class="col-lg-6 order-lg-2">
