--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
             <div class="p-5">
               <img
                 class="img-thumbnail img-fluid"
-                src="assets/img/TW'24/6.png"
+                src="assets/img/TW'24/ERC.png"
                 style=""
               />
             </div>
