--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
     <div class="row align-items-center" style="background: #ffffff; border-radius: 17px;">
       <div class="col-lg-6 order-lg-1">
         <div class="p-5 d-flex justify-content-center">
-          <img class="img-thumbnail img-fluid" src="assets/img/TW'24/10.png" style="max-height: 100%; max-width: 100%;">
+          <img class="img-thumbnail img-fluid" src="assets/img/TW'24/SOFI.png" style="max-height: 100%; max-width: 100%;">
         </div>
       </div>
       <div class="col-lg-6 order-lg-2">
