--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
           <div class="p-5">
             <img
               class="img-thumbnail img-fluid"
-              src="assets/img/TW'24/7.png"
+              src="assets/img/TW'24/dc.png"
               style=""
             />
           </div>
