--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
         <div class="p-5">
           <img
             class="img-fluid"
-            src="assets/img/TW'24/11.png"
+            src="assets/img/TW'24/ieee.png"
             style="width: 100%; height: auto;"
           />
         </div>
