--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
         <div class="row align-items-center" style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-thumbnail img-fluid" src="assets/img/TW'24/13.png" style="max-width: 100%; max-height: 100%;">
+              <img class="img-thumbnail img-fluid" src="assets/img/TW'24/DWDG.png" style="max-width: 100%; max-height: 100%;">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
