Change in title

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ style="
               background: rgba(150, 149, 149, 0);
             "
           >
-            Spring&nbsp;<strong>2025</strong><br />
+            <strong>2025</strong><br />
           </h2>
           <!--h1 style="color: #45b334; transform: scale(0.6)">
             Associate Sponsor :&nbsp;<a href="https://www.geeksforgeeks.org/"
