--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                   <p style="color: rgb(122, 204, 109)">11th January<br />11:00 A.M. to 1:00pm<br />₹10000<br /></p>
                 </div>
               </div>
-              <button onclick="window.open('https://docs.google.com/forms/d/1T0r5eAeAh8copGprxyAGWFVDsT1ItzYgDMv_6cKkiMM/edit','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
+              <button onclick="window.open('https://forms.gle/QmH6wZBvaLTJXg8o6','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
             </div>
           </div>
         </div>
