--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    13th January 12:00 AM<br />15th January 11:59 PM<br />₹10000<br />
+                    13th January 12:00 AM<br />15th January 12:00 AM<br />₹10000<br />
                   </p>
                 </div>
               </div>
