--- a/index.html
+++ b/index.html
@@ -815,6 +815,65 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
   </div>
 </section>
 
+<section>
+  <div class="container">
+    <div
+      class="row align-items-center"
+      style="
+        background: #f7f7f7;
+        border-color: rgb(43, 234, 26);
+        border-radius: 17px;
+      "
+    >
+      <div class="col-lg-6 order-lg-2">
+        <div class="p-5">
+          <img
+            class="img-thumbnail img-fluid"
+            src="assets/img/TW'24/automania.png"
+            style=""
+          />
+        </div>
+      </div>
+      <div class="col-lg-6 order-lg-1">
+        <div class="p-5">
+          <h2 class="display-4" style="font-size: 40px">
+            Automania
+          </h2>
+          <h1 style="font-size: 17px; color: rgb(68, 205, 90)">
+            Project Kratos<br />
+          </h1>
+          <p class="text-start" style="color: rgb(33, 37, 41)">
+            Are you amazed by what robots can achieve? Brace yourself for an even more mind-blowing experience at Automania, a 24-hour hackathon.   Join us as we challenge you to program an Autonomous Mobile robot to navigate and steer clear of obstacles, simulating an intelligent brain of its own.
+          <div class="row">
+            <div class="col text-start">
+              <p style="width: 135px">Date<br />Prizes</p>
+            </div>
+            <div class="col">
+              <p style="color: rgb(122, 204, 109)">
+                13th January<br />₹10000<br />
+              </p>
+            </div>
+          </div>
+          <button
+          onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdFssVRGKVv7cCrIfeb4AHLEJv29Qy5-Uzq_MrmSUxCW-z3qA/viewform','_blank')"
+          class="btn btn-primary border rounded-0"
+          type="button"
+          style="
+            background: #44cd5a;
+            border-top-color: rgb(255, 255, 255);
+            border-right-color: rgb(255, 255, 255);
+            border-bottom-color: rgb(255, 255, 255);
+            border-left-color: rgb(252, 252, 252);
+          "
+        >
+          Register
+        </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
     <!-- Footer -->
     <footer
       class="
