--- a/index.html
+++ b/index.html
@@ -846,11 +846,11 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
             Are you amazed by what robots can achieve? Brace yourself for an even more mind-blowing experience at Automania, a 24-hour hackathon.   Join us as we challenge you to program an Autonomous Mobile robot to navigate and steer clear of obstacles, simulating an intelligent brain of its own.
           <div class="row">
             <div class="col text-start">
-              <p style="width: 135px">Date<br />Prizes</p>
+              <p style="width: 135px">Date<br />Time<br/>Prizes</p>
             </div>
             <div class="col">
               <p style="color: rgb(122, 204, 109)">
-                13th January<br />₹10000<br />
+                13th January<br />8:30 PM - 10:30 PM<br />₹10000<br />
               </p>
             </div>
           </div>
