Added kratos prize money

--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@ Adding a twist, we’ve introduced a “blind auction” for priority-priced ite
             </div>
             <div class="col">
               <p style="color: rgb(122, 204, 109)">
-                13th January<br />8:30 PM - 10:30 PM<br />₹10000<br />
+                13th January<br />8:30 PM - 10:30 PM<br />₹1000 (1st place)<br />
               </p>
             </div>
           </div>
