--- a/index.html
+++ b/index.html
@@ -821,15 +821,58 @@ The objective is to show your technical strengths and then solve the puzzles. Th
             </p>
             <div class="row">
               <div class="col text-start">
-                <p style="width: 135px">Date<br />Time<br />Prizes</p>
+                <p style="width: 135px">Date<br />Time</p>
               </div>
               <div class="col">
-                <p style="color: rgb(122, 204, 109)">10th January<br />5:30-8:00PM<br />₹10000<br /></p>
+                <p style="color: rgb(122, 204, 109)">10th January<br />5:30-8:00PM<br /></p>
               </div>
             </div>
             <button
               onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeZEj00pDlwG458huFGhCsYxfDSC1_2xrD_kVpJ583rqz8_ZA/viewform','_blank');"
               class="btn btn-primary border rounded-0" type="button" style="
+                background: #44cd5a;
+                border-top-color: rgb(255, 255, 255);
+                border-right-color: rgb(255, 255, 255);
+                border-bottom-color: rgb(255, 255, 255);
+                border-left-color: rgb(252, 252, 252);
+              ">
+              Register
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Event 2: SoFI -->
+  <section style="background: #f7f7f7;">
+    <div class="container">
+      <div class="row align-items-center"
+        style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <img class="img-thumbnail img-fluid" src="assets/img/TW'26/sofi.png"
+              style="max-width: 100%; max-height: 100%;">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <h2 class="display-4" style="font-size: 40px">Finance Frenzy</h2>
+            <h1 style="font-size: 17px; color: #44cd5a">SoFI<br /></h1>
+            <p class="text-start" style="color: rgb(33, 37, 41)">
+              The quiz consists of two rounds. It begins with a written preliminary round of 20 questions, where 5
+              "starred" questions determine tie-breaks. The top 6 teams will advance to the final round, featuring 10
+              questions in a dynamic pass-and-play format.
+            </p>
+            <div class="row">
+              <div class="col text-start">
+                <p style="width: 135px">Date<br />Time</p>
+              </div>
+              <div class="col">
+                <p style="color: rgb(122, 204, 109)">9th January<br />7PM onwards<br /></p>
+              </div>
+            </div>
+            <button class="btn btn-primary border rounded-0" type="button" style="
                 background: #44cd5a;
                 border-top-color: rgb(255, 255, 255);
                 border-right-color: rgb(255, 255, 255);
