--- a/index.html
+++ b/index.html
@@ -872,7 +872,204 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                 <p style="color: rgb(122, 204, 109)">9th January<br />7PM onwards<br /></p>
               </div>
             </div>
-            <button class="btn btn-primary border rounded-0" type="button" style="
+            <button onclick="window.open('https://forms.gle/tZjcc4Rt5wBqhJgP7','_blank');"
+              class="btn btn-primary border rounded-0" type="button" style="
+                background: #44cd5a;
+                border-top-color: rgb(255, 255, 255);
+                border-right-color: rgb(255, 255, 255);
+                border-bottom-color: rgb(255, 255, 255);
+                border-left-color: rgb(252, 252, 252);
+              ">
+              Register
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Event 3: SAiDl -->
+  <section style="background: #f7f7f7;">
+    <div class="container">
+      <div class="row align-items-center"
+        style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-thumbnail img-fluid" src="assets/img/TW'26/saidl.png"
+              style="max-width: 100%; max-height: 100%;">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4" style="font-size: 40px">Training without Gradients</h2>
+            <h1 style="font-size: 17px; color: #44cd5a">SAiDl<br /></h1>
+            <p class="text-start" style="color: rgb(33, 37, 41)">
+              Gradient-based optimization has become the default approach for training machine learning models. However,
+              many real-world systems are non-differentiable, black-box, or physically constrained, making gradients
+              unavailable or meaningless.
+              <br /><br />
+              In this competition, participants must train a machine learning model without using gradients of any kind.
+              You are provided with a training dataset and a test dataset, exactly like a standard Kaggle competition,
+              but backpropagation, automatic differentiation, and numerical gradients are strictly forbidden.
+              Your task is to achieve the best possible performance on the test set using only gradient-free learning
+              methods.
+            </p>
+            <div class="row">
+              <div class="col text-start">
+                <p style="width: 135px">Date<br />Time</p>
+              </div>
+              <div class="col">
+                <p style="color: rgb(122, 204, 109)">9th-12th January<br />12PM onwards<br /></p>
+              </div>
+            </div>
+            <button
+              onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSddFrtEOk8Uc1WrSdX6cvLL-szAxdu-mxNguAl6-QiQMdp6Aw/viewform','_blank');"
+              class="btn btn-primary border rounded-0" type="button" style="
+                background: #44cd5a;
+                border-top-color: rgb(255, 255, 255);
+                border-right-color: rgb(255, 255, 255);
+                border-bottom-color: rgb(255, 255, 255);
+                border-left-color: rgb(252, 252, 252);
+              ">
+              Register
+            </button>
+            <!--
+            <button onclick="window.open('assets/detailed_desc/saidl.pdf','_blank');"
+              class="btn btn-primary border rounded-0" type="button" style="
+                background: #44cd5a;
+                border-top-color: rgb(255, 255, 255);
+                border-right-color: rgb(255, 255, 255);
+                border-bottom-color: rgb(255, 255, 255);
+                border-left-color: rgb(252, 252, 252);
+              ">
+              Rules
+            </button>
+            -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Event 4: ERC -->
+  <section style="background: #f7f7f7;">
+    <div class="container">
+      <div class="row align-items-center"
+        style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <img class="img-thumbnail img-fluid" src="assets/img/TW'26/erc.png"
+              style="max-width: 100%; max-height: 100%;">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <h2 class="display-4" style="font-size: 40px">Crack the Case</h2>
+            <h1 style="font-size: 17px; color: #44cd5a">ERC<br /></h1>
+            <p class="text-start" style="color: rgb(33, 37, 41)">
+              Can you Crack the Case? Join ERC and CTE for the ultimate decryption challenge. Solve 8 rapid-fire tasks to uncover the digits and positions of a secret 4-digit password. You have three strikes to guess the code—the first to unlock it takes the trophy!
+            </p>
+            <div class="row">
+              <div class="col text-start">
+                <p style="width: 135px">Date<br />Time</p>
+              </div>
+              <div class="col">
+                <p style="color: rgb(122, 204, 109)">11th January<br />5PM onwards<br /></p>
+              </div>
+            </div>
+            <button
+              onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScRArcjJPBZspBc6eRQUgHWrsNq7oKCrqwqj7QhA-aCacdKrg/viewform','_blank');"
+              class="btn btn-primary border rounded-0" type="button" style="
+                background: #44cd5a;
+                border-top-color: rgb(255, 255, 255);
+                border-right-color: rgb(255, 255, 255);
+                border-bottom-color: rgb(255, 255, 255);
+                border-left-color: rgb(252, 252, 252);
+              ">
+              Register
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Event 5: BITSKrieg -->
+  <section style="background: #f7f7f7;">
+    <div class="container">
+      <div class="row align-items-center"
+        style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-thumbnail img-fluid" src="assets/img/TW'26/bitskrieg.png"
+              style="max-width: 100%; max-height: 100%;">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4" style="font-size: 40px">TechWknd CTF</h2>
+            <h1 style="font-size: 17px; color: #44cd5a">BITSKrieg<br /></h1>
+            <p class="text-start" style="color: rgb(33, 37, 41)">
+              TechWeekend CTF is a high-intensity, jeopardy-style Capture The Flag competition organized by BITSkrieg in collaboration with CTE, crafted as an immersive overnight cybersecurity experience that pushes participants to think fast, collaborate effectively, and apply practical security skills under pressure. Running online for 12 continuous hours from 6:00 PM on January 9 to 6:00 AM on January 10, the competition features a carefully designed set of challenges spanning Web Exploitation, Reverse Engineering, Cryptography, Forensics, Binary Exploitation (PWN), and OSINT, with a dynamic scoring system that rewards both speed and ingenuity.
+            </p>
+            <div class="row">
+              <div class="col text-start">
+                <p style="width: 135px">Date<br />Time</p>
+              </div>
+              <div class="col">
+                <p style="color: rgb(122, 204, 109)">9th January<br />6PM onwards<br /></p>
+              </div>
+            </div>
+            <button
+              onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSffHcNuJfoh5UQppEsCpFcPe1Hu_RHd9JWGvMW2R1GjMma_ug/viewform','_blank');"
+              class="btn btn-primary border rounded-0" type="button" style="
+                background: #44cd5a;
+                border-top-color: rgb(255, 255, 255);
+                border-right-color: rgb(255, 255, 255);
+                border-bottom-color: rgb(255, 255, 255);
+                border-left-color: rgb(252, 252, 252);
+              ">
+              Register
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Event 6: DWDG -->
+  <section style="background: #f7f7f7;">
+    <div class="container">
+      <div class="row align-items-center"
+        style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <img class="img-thumbnail img-fluid" src="assets/img/TW'26/dwdg.png"
+              style="max-width: 100%; max-height: 100%;">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <h2 class="display-4" style="font-size: 40px">The CEO Dilemma</h2>
+            <h1 style="font-size: 17px; color: #44cd5a">DWDG<br /></h1>
+            <p class="text-start" style="color: rgb(33, 37, 41)">
+              CEO Dilemma is a one-round strategy consulting competition that places participants in the role of trusted advisors to a company's CEO. Teams are given a realistic business situation involving a profitable but structurally challenged firm and are asked to diagnose the root causes behind declining performance.
+              <br /><br />
+              The case mirrors the way top consulting firms approach real client problems — incomplete information, competing priorities, and limited time. Participants must structure an ambiguous problem, identify the few issues that truly matter, and recommend a clear, defensible course of action.
+              <br /><br />
+              There is no single correct answer. Success in CEO Dilemma depends on clarity of thought, sound business judgment, and the ability to communicate insights succinctly. Designed to reflect the problem-solving style of McKinsey, Bain, and BCG, the competition tests how well you can think like a consultant and decide like a CEO.
+            </p>
+            <div class="row">
+              <div class="col text-start">
+                <p style="width: 135px">Date<br />Time</p>
+              </div>
+              <div class="col">
+                <p style="color: rgb(122, 204, 109)">10th January<br />8:30PM onwards<br /></p>
+              </div>
+            </div>
+            <button
+              onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfTeRRb0tqjQjQ28iecFOW09ZUWKyDgrU-GdTE9yXujX_VtmQ/viewform','_blank');"
+              class="btn btn-primary border rounded-0" type="button" style="
                 background: #44cd5a;
                 border-top-color: rgb(255, 255, 255);
                 border-right-color: rgb(255, 255, 255);
