--- a/index.html
+++ b/index.html
@@ -967,7 +967,9 @@ The objective is to show your technical strengths and then solve the puzzles. Th
             <h2 class="display-4" style="font-size: 40px">Crack the Case</h2>
             <h1 style="font-size: 17px; color: #44cd5a">ERC<br /></h1>
             <p class="text-start" style="color: rgb(33, 37, 41)">
-              Can you Crack the Case? Join ERC and CTE for the ultimate decryption challenge. Solve 8 rapid-fire tasks to uncover the digits and positions of a secret 4-digit password. You have three strikes to guess the code—the first to unlock it takes the trophy!
+              Can you Crack the Case? Join ERC and CTE for the ultimate decryption challenge. Solve 8 rapid-fire tasks
+              to uncover the digits and positions of a secret 4-digit password. You have three strikes to guess the
+              code—the first to unlock it takes the trophy!
             </p>
             <div class="row">
               <div class="col text-start">
@@ -1010,7 +1012,13 @@ The objective is to show your technical strengths and then solve the puzzles. Th
             <h2 class="display-4" style="font-size: 40px">TechWknd CTF</h2>
             <h1 style="font-size: 17px; color: #44cd5a">BITSKrieg<br /></h1>
             <p class="text-start" style="color: rgb(33, 37, 41)">
-              TechWeekend CTF is a high-intensity, jeopardy-style Capture The Flag competition organized by BITSkrieg in collaboration with CTE, crafted as an immersive overnight cybersecurity experience that pushes participants to think fast, collaborate effectively, and apply practical security skills under pressure. Running online for 12 continuous hours from 6:00 PM on January 9 to 6:00 AM on January 10, the competition features a carefully designed set of challenges spanning Web Exploitation, Reverse Engineering, Cryptography, Forensics, Binary Exploitation (PWN), and OSINT, with a dynamic scoring system that rewards both speed and ingenuity.
+              TechWeekend CTF is a high-intensity, jeopardy-style Capture The Flag competition organized by BITSkrieg in
+              collaboration with CTE, crafted as an immersive overnight cybersecurity experience that pushes
+              participants to think fast, collaborate effectively, and apply practical security skills under pressure.
+              Running online for 12 continuous hours from 6:00 PM on January 9 to 6:00 AM on January 10, the competition
+              features a carefully designed set of challenges spanning Web Exploitation, Reverse Engineering,
+              Cryptography, Forensics, Binary Exploitation (PWN), and OSINT, with a dynamic scoring system that rewards
+              both speed and ingenuity.
             </p>
             <div class="row">
               <div class="col text-start">
@@ -1053,11 +1061,18 @@ The objective is to show your technical strengths and then solve the puzzles. Th
             <h2 class="display-4" style="font-size: 40px">The CEO Dilemma</h2>
             <h1 style="font-size: 17px; color: #44cd5a">DWDG<br /></h1>
             <p class="text-start" style="color: rgb(33, 37, 41)">
-              CEO Dilemma is a one-round strategy consulting competition that places participants in the role of trusted advisors to a company's CEO. Teams are given a realistic business situation involving a profitable but structurally challenged firm and are asked to diagnose the root causes behind declining performance.
+              CEO Dilemma is a one-round strategy consulting competition that places participants in the role of trusted
+              advisors to a company's CEO. Teams are given a realistic business situation involving a profitable but
+              structurally challenged firm and are asked to diagnose the root causes behind declining performance.
               <br /><br />
-              The case mirrors the way top consulting firms approach real client problems — incomplete information, competing priorities, and limited time. Participants must structure an ambiguous problem, identify the few issues that truly matter, and recommend a clear, defensible course of action.
+              The case mirrors the way top consulting firms approach real client problems — incomplete information,
+              competing priorities, and limited time. Participants must structure an ambiguous problem, identify the few
+              issues that truly matter, and recommend a clear, defensible course of action.
               <br /><br />
-              There is no single correct answer. Success in CEO Dilemma depends on clarity of thought, sound business judgment, and the ability to communicate insights succinctly. Designed to reflect the problem-solving style of McKinsey, Bain, and BCG, the competition tests how well you can think like a consultant and decide like a CEO.
+              There is no single correct answer. Success in CEO Dilemma depends on clarity of thought, sound business
+              judgment, and the ability to communicate insights succinctly. Designed to reflect the problem-solving
+              style of McKinsey, Bain, and BCG, the competition tests how well you can think like a consultant and
+              decide like a CEO.
             </p>
             <div class="row">
               <div class="col text-start">
@@ -1069,6 +1084,50 @@ The objective is to show your technical strengths and then solve the puzzles. Th
             </div>
             <button
               onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfTeRRb0tqjQjQ28iecFOW09ZUWKyDgrU-GdTE9yXujX_VtmQ/viewform','_blank');"
+              class="btn btn-primary border rounded-0" type="button" style="
+                background: #44cd5a;
+                border-top-color: rgb(255, 255, 255);
+                border-right-color: rgb(255, 255, 255);
+                border-bottom-color: rgb(255, 255, 255);
+                border-left-color: rgb(252, 252, 252);
+              ">
+              Register
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Event 7: 180DC -->
+  <section style="background: #f7f7f7;">
+    <div class="container">
+      <div class="row align-items-center"
+        style="background: #f7f7f7; border-color: rgb(43, 234, 26); border-radius: 17px;">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-thumbnail img-fluid" src="assets/img/TW'26/180dc.png"
+              style="max-width: 100%; max-height: 100%;">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4" style="font-size: 40px">Insight Incubator</h2>
+            <h1 style="font-size: 17px; color: #44cd5a">180DC<br /></h1>
+            <p class="text-start" style="color: rgb(33, 37, 41)">
+              An interactive consulting-focused session featuring case discussions, real-world problem statements, and a
+              challenge, offering participants direct induction advantages.
+            </p>
+            <div class="row">
+              <div class="col text-start">
+                <p style="width: 135px">Date<br />Time</p>
+              </div>
+              <div class="col">
+                <p style="color: rgb(122, 204, 109)">12th January<br />8:30PM onwards<br /></p>
+              </div>
+            </div>
+            <button
+              onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdgyK4Kh-1IdhSLZ5YIBEeg8DLip9AJQMEfPE_wYOx9bmvxlg/viewform','_blank');"
               class="btn btn-primary border rounded-0" type="button" style="
                 background: #44cd5a;
                 border-top-color: rgb(255, 255, 255);
